[gd_scene load_steps=4 format=3 uid="uid://kqlcwl7r6yvb"]

[ext_resource type="Script" path="res://scripts/PauseMenuScene.gd" id="1_jwsj6"]
[ext_resource type="Shader" path="res://scenes/PauseMenuScene.gdshader" id="2_abkoj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_32psg"]
shader = ExtResource("2_abkoj")
shader_parameter/amount = 0.5

[node name="PauseMainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jwsj6")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_32psg")
layout_mode = 2
offset_left = -1684.0
offset_top = -1125.0
offset_right = 2377.0
offset_bottom = 1066.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -68.0
offset_right = 45.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MainMenu"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_info_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
